# PolyShell

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  README.md  index.html  initialExploration.ipynb  mkdocs.yml  polyshell.pyi  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: CD.yml  CI.yml  cd.yml  ci.yaml  publish-docs.yml  update_version.yml
docs/: index.md
docs/algorithms/: visvalingam_whyatt.md
docs/reference/algorithms/: charshape.md  ramer-douglas-peucker.md
docs/user-guide/: axioms.md  features.md  installation.md
python/polyshell/: __init__.py  _cli.py  _polyshell.pyi
reference/: index.html
reference/algorithms/charshape/: index.html
reference/algorithms/ramer-douglas-peucker/: index.html
reference/algorithms/visvalingam-whyatt/: index.html
reference/benchmarks/: index.html
scripts/: loss_curve.py  plot_gif.py  plot_poly.py  profile.py
scripts/benchmark/: pyproject.toml
scripts/benchmark/src/benchmark/: __init__.py  bench.py  charshape.py  main.py  rdp.py  vw.py
scripts/cli/: pyproject.toml
scripts/cli/src/cli/: main.py
search/: search_index.json
src/: convex_hull.rs  geo_ext.rs  lib.rs  reduce.rs
src/algorithms/: charshape.rs  hull_melkman.rs  melkman.rs  mod.rs  rdp.rs  simplify_charshape.rs  simplify_rdp.rs  simplify_vw.rs  visibility.rs  vw.rs  vw_convex.rs
src/convex_hull/: mod.rs
src/extensions/: conversions.rs  mod.rs  ord_triangles.rs  segments.rs  triangulate.rs  validation.rs
src/polyshell/: Edges.py  __init__.py  geometry.py  heap.py  kd_tree.py  reducer.py  utils.py
src/polyshell/cli/: main.py  plot.py  reduce.py
src/polyshell/cli/utils/: __init__.py  file_formats.py
src/polyshell/convex_hull/: __init__.py  melkman.py
src/polyshell/reducer/: __init__.py  utils.py
src/polyshell/reducer/charshape/: __init__.py  charshape.py
src/polyshell/reducer/rdp/: __init__.py  loss_funcs.py  rdp.py
src/polyshell/reducer/vw/: __init__.py  loss_funcs.py  vw.py
src/reduce/: char_shape.rs  mod.rs  rdp.rs  vw_preserve.rs
src/types/: mod.rs  ord_triangle.rs
src/utility/: mod.rs  polygon_processing.rs
tests/: cases_end_to_end.py  conftest.py  method_cases.py  polygon_cases.py  profile.py  test_end_to_end.py  test_integration.py  test_mediterranean_sea.py  test_reduction.py  test_smooth.ipynb
tests/data/: ionian_polygon_points.pkl
tests/data/land/: afro_eurasia.pkl  americas.pkl  antarctica.pkl  baffin_island.pkl  greenland.pkl
user-guide/: index.html
user-guide/axioms/: index.html
user-guide/features/: index.html
user-guide/getting-help/: index.html
user-guide/installation/: index.html
