[package]
name = "polyshell"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polyshell"
crate-type = ["cdylib", "rlib"]

[dependencies]
geo = "0.31.0"
pyo3 = "0.25.0"
rayon = "1.10.0"
rstar = "0.12.2"
spade = "2.15.0"
