[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "polyshell"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.9.3",
    "pyinstrument>=5.0.3",
]
testing = [
    { include-group = "dev" },
    "pytest>=8.3.5",
    "pytest-cases>=3.9.1",
    "shapely>=2.0.7",
]
scripts = [
    "matplotlib>=3.7.5",
]

[tool.maturin]
python-source = "python"
module-name = "polyshell._polyshell"
features = ["pyo3/extension-module"]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{ file = "pyproject.toml" }, { file = "rust/Cargo.toml" }, { file = "**/*.rs" }]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }

[tool.pytest.ini_options]
testpaths = "tests"
