[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "polyshell"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
    { name = "Niall Oswald", email = "niall.oswald20@imperial.ac.uk" },
    { name = "Kenneth Martin", email = "k.martin24@imperial.ac.uk" },
    { name = "Jo Wayne Tan", email = "jo.tan17@imperial.ac.uk" },
]
dynamic = ["version"]
dependencies = []

[dependency-groups]
dev = [
    { include-group = "testing" },
    "benchmark",
    "cli",
    "maturin>=1.9.3",
]
testing = [
    "pytest>=8.3.5",
    "pytest-cases>=3.9.1",
    "shapely>=2.0.7",
    "numpy>=2.2.6",
]
docs = [
    "mkdocs-material>=9.6.15",
    "termynal>=0.13.1",
]

[tool.maturin]
python-source = "python"
module-name = "polyshell._polyshell"
features = ["pyo3/extension-module"]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{ file = "pyproject.toml" }, { file = "rust/Cargo.toml" }, { file = "**/*.rs" }]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }

[tool.uv.sources]
benchmark = { workspace = true }
cli = { workspace = true }

[tool.uv.workspace]
members = [
    "scripts/benchmark",
    "scripts/cli",
]

[tool.pytest.ini_options]
testpaths = "tests"
