[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli"
version = "0.1.0"
description = "CLI for PolyShell."
readme = "README.md"
authors = [
    { name = "Niall Oswald", email = "niall.oswald@hotmail.co.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.5",
    "typer>=0.17.4",
]

[project.scripts]
polyshell = "cli.main:app"
